# aiida-aurora

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  pyproject.toml  setup.json  setup.py
.github/: check_version.py
.github/workflows/: ci.yml  publish-on-pypi.yml
aiida_aurora/: __init__.py  calculations.py  cli.py  helpers.py  monitors.py  parsers.py  scheduler.py
aiida_aurora/calculations/: __init__.py  cycler.py  fake.py
aiida_aurora/data/: __init__.py  battery.py  control.py  experiment.py
aiida_aurora/schemas/: __init__.py  battery.py  cycling.py
aiida_aurora/schemas/dgbowl/: __init__.py
aiida_aurora/schemas/dgbowl/converters/: method.py  sample.py
aiida_aurora/schemas/utils/: __init__.py
aiida_aurora/utils/: __init__.py  analyzers.py  cycling_analysis.py  parsers.py  plot.py
aiida_aurora/workflows/: __init__.py  cycling_sequence.py  stress_test.py  stress_test_defaults.json
docs/source/: conf.py  index.rst  nitpick-exceptions
docs/source/developer_guide/: index.rst
docs/source/user_guide/: get_started.rst
examples/: example_01.py
examples/config_files/: code_ketchup-0.2rc1.yml  code_ketchup-0.2rc2.yml  code_monitor.yml  computer_ddm07162.yml  computer_ddm07162_config.yaml  computer_localhost-verdi.yml  computer_localhost.yml  setup.sh
examples/config_tests/: code_ketchup-0.2rc2.yml  computer_localhost_tomato.yml  computer_localhost_tomato_config.yml
examples/cycling_sequence/: README.md  test_cycling_sequence.py
examples/stress_test/: batteries.json  submit_test.py
fake_aurora_server/: batt.json  exp.json  server.py
tests/: conftest.py  test_calculations.py  test_cli.py  test_entry_points.py
